<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/left_arrow"/>


        <TextView
            android:id="@+id/menuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/print"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:visibility="visible" />
    </RelativeLayout>




   <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="none"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/text_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Vendtech"
                        android:textAllCaps="true"
                        android:textSize="@dimen/_24ssp"
                        android:textStyle="bold"
                        android:id="@+id/tv_vendtech_name"/>

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@null"
                        android:src="@drawable/ic_close"
                        android:scaleType="fitCenter"
                        android:padding="@dimen/_7sdp"
                        android:id="@+id/img_close2"
                        android:layout_gravity="right" />

                </FrameLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAlignment="center"
                   android:layout_gravity="center"
                   android:gravity="center">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:text="AFRICELL "
                       android:textAllCaps="true"
                       android:textSize="@dimen/_17ssp"
                       android:id="@+id/tv_platformName"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:paddingStart="@dimen/_3sdp"
                       android:text="@string/airtimePlatform"
                       android:textAllCaps="true"
                       android:textSize="@dimen/_17ssp"/>
               </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorlightPrimary" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10ssp">

                    <TextView
                        style="@style/text_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="date:  "
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:id="@+id/tv_date_txt"/>

                    <TextView
                        android:id="@+id/tv_date"
                        style="@style/text_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text=""
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10ssp">

                    <TextView
                        style="@style/text_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vendor"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:id="@+id/tv_vendor_txt"/>

                    <TextView
                        android:id="@+id/tv_vendor_name"
                        style="@style/text_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:gravity="right"
                        android:text=""
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2ssp">

                    <TextView
                        style="@style/text_bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="pos id:"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:id="@+id/tv_pos_id_txt"/>

                    <TextView
                        android:id="@+id/tv_pos_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text=""
                        android:textAllCaps="true"
                        android:textStyle="bold" />


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_10ssp"
                        android:layout_toLeftOf="@+id/tv_custInfo"
                        android:background="@color/colorlightPrimary" />

                    <TextView
                        android:id="@+id/tv_custInfo"
                        style="@style/text_normal_nocaps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/cust_info"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_10ssp"
                        android:layout_toRightOf="@+id/tv_custInfo"
                        android:background="@color/colorlightPrimary" />

                </RelativeLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2ssp">
                    <TextView
                        style="@style/text_normal_nocaps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Phone #:"
                        android:id="@+id/PhoneTV"/>
                    <TextView
                        android:id="@+id/tv_account"
                        style="@style/text_normal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="" />
                </LinearLayout>





                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_10ssp"
                    android:layout_marginRight="@dimen/_10ssp"
                    android:layout_toLeftOf="@+id/tv_tottext"
                    android:background="@color/darkgreycolor" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10ssp"
                        android:layout_weight="1">

                        <TextView
                            style="@style/text_bold_nocaps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Vendtech Serial #:"
                            android:textStyle="italic"
                            android:id="@+id/tv_serial"/>

                        <!--                            android:id="@+id/tv_serial"-->
                        <TextView
                            android:id="@+id/tv_transaction_id"
                            style="@style/text_bold_nocaps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:gravity="right"
                            android:text=""
                            android:textStyle="italic" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10ssp">




                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_30sdp">


                    <TextView
                        style="@style/text_bold_nocaps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="www.vendtechsl.com"
                        android:textStyle="italic"
                        android:id="@+id/tv_web_text"/>

                    <!--<TextView
                        style="@style/text_bold_nocaps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Call +232 76 990 990"
                        android:id="@+id/tv_phone_no"/>-->
                    <TextView
                        style="@style/text_bold_nocaps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="Call +232 79 990990"
                        android:id="@+id/tv_phone_no"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingBottom="@dimen/_20"
        android:paddingRight="@dimen/_3sdp"
        android:paddingTop="@dimen/_5sdp">

        <TextView
            android:id="@+id/tv_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10ssp"
            android:layout_toLeftOf="@+id/tv_print"
            android:background="@drawable/button_gray_prnt"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:text="SMS"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/tv_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_yellow_prnt"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:visibility="gone"
            android:paddingRight="@dimen/_20sdp"
            android:text="PRINT"
            android:textSize="@dimen/_12sdp"
            />

    </LinearLayout>


</LinearLayout>